fix: table column and content misalignment

--- a/projects/components/src/table/cells/data-renderers/table-data-cell-renderer.component.scss
+++ b/projects/components/src/table/cells/data-renderers/table-data-cell-renderer.component.scss
@@ -5,7 +5,7 @@
   align-items: center;
   height: calc(100% - 8px); // subtract margin
   margin: 4px 4px;
-  padding: 2px 4px;
+  padding: 2px 8px;
 
   &.selected {
     background: $blue-1;
