--- a/projects/components/src/table/table.component.scss
+++ b/projects/components/src/table/table.component.scss
@@ -71,7 +71,7 @@
   }
 
   .header-column-resize-handle {
-    padding: 6px 2px;
+    padding: 6px 0px;
     height: 100%;
     cursor: col-resize;
 
